// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskType renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-type: 0;
  mask-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 0;
  mask-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 0;
  mask-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 0;
  mask-type: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-type: hasnot;
  mask-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: has;
  mask-type: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: hasnot;
  mask-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: has;
  mask-type: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-type: invalid.path.1;
  mask-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: invalid.path.1;
  mask-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: invalid.path.1;
  mask-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: invalid.path.1;
  mask-type: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-type: -54881;
  mask-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: -54881;
  mask-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: -42365;
  mask-type: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: -42365;
  mask-type: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: January;
  mask-type: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: January;
  mask-type: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: July;
    mask-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: July;
    mask-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

@media May {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

@media May {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: April;
  mask-type: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: January;
    mask-type: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: April;
  mask-type: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: January;
    mask-type: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-type: July;
    mask-type: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-type: July;
    mask-type: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: September;
    mask-type: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: November;
    mask-type: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: August;
    mask-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-type: January;
    mask-type: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-type: January;
    mask-type: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: December;
    mask-type: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-type: April;
    mask-type: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-type: May;
    mask-type: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-type: June;
    mask-type: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-type: 54881;
  mask-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 54881;
  mask-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 42365;
  mask-type: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: 42365;
  mask-type: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: July;
  mask-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: June;
  mask-type: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: June;
  mask-type: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskType renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskType renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-type: DarkSlateBlue;
  mask-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: DarkSlateBlue;
  mask-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: DarkSlateBlue;
  mask-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-type: DarkSlateBlue;
  mask-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
